setup HTML time blocks

--- a/index.html
+++ b/index.html
@@ -30,6 +30,116 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
+      <div class="">
+        <div class="">
+          <span class="">9:00 AM</span>
+        </div>
+        <textarea value="" id="" type="text" class="textarea"></textarea>
+        <div class="">
+          <button id="" class="" type="buton">
+            <i></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="">
+        <div class="">
+          <span class="">10:00 AM</span>
+        </div>
+        <textarea value="" id="" type="text" class="textarea"></textarea>
+        <div class="">
+          <button id="" class="" type="buton">
+            <i></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="">
+        <div class="">
+          <span class="">11:00 AM</span>
+        </div>
+        <textarea value="" id="" type="text" class="textarea"></textarea>
+        <div class="">
+          <button id="" class="" type="buton">
+            <i></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="">
+        <div class="">
+          <span class="">12:00 PM</span>
+        </div>
+        <textarea value="" id="" type="text" class="textarea"></textarea>
+        <div class="">
+          <button id="" class="" type="buton">
+            <i></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="">
+        <div class="">
+          <span class="">1:00 PM</span>
+        </div>
+        <textarea value="" id="" type="text" class="textarea"></textarea>
+        <div class="">
+          <button id="" class="" type="buton">
+            <i></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="">
+        <div class="">
+          <span class="">2:00 PM</span>
+        </div>
+        <textarea value="" id="" type="text" class="textarea"></textarea>
+        <div class="">
+          <button id="" class="" type="buton">
+            <i></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="">
+        <div class="">
+          <span class="">3:00 PM</span>
+        </div>
+        <textarea value="" id="" type="text" class="textarea"></textarea>
+        <div class="">
+          <button id="" class="" type="buton">
+            <i></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="">
+        <div class="">
+          <span class="">4:00 PM</span>
+        </div>
+        <textarea value="" id="" type="text" class="textarea"></textarea>
+        <div class="">
+          <button id="" class="" type="buton">
+            <i></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="">
+        <div class="">
+          <span class="">5:00 PM</span>
+        </div>
+        <textarea value="" id="" type="text" class="textarea"></textarea>
+        <div class="">
+          <button id="" class="" type="buton">
+            <i></i>
+          </button>
+        </div>
+      </div>
+
+    <!-- DIV CONTAINER END TAG -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
