added id attributes to HTML Tags

--- a/index.html
+++ b/index.html
@@ -33,82 +33,82 @@
     <div class="container align-items-center justify-content-center">
       <!-- Timeblocks go here -->
 
-      <div class="row time-block">
-            <div class="col-1 hour pt-2">9:00 AM</div>
-            <textarea value="" id="" type="text" class="textarea col-10"></textarea>
-            <button id="" class="saveBtn col-1" type="buton">
+      <div class="row time-block" id="timeBlockNine">
+            <div class="col-1 hour pt-2" id="hourNine">9:00 AM</div>
+            <textarea value="" id="textNine" type="text" class="textarea col-10"></textarea>
+            <button id="buttonNine" class="saveBtn col-1" type="buton">
               <i class="fas fa-save"></i>
             </button>
         <!-- ROW ENDING TAG-->
         </div>
 
-        <div class="row time-block">
-          <div class="col-1 hour pt-2">10:00 AM</div>
-          <textarea value="" id="" type="text" class="textarea col-10"></textarea>
-          <button id="" class="saveBtn col-1" type="buton">
+        <div class="row time-block" id="timeBlockTen">
+          <div class="col-1 hour pt-2" id="hourTen">10:00 AM</div>
+          <textarea value="" id="textTen" type="text" class="textarea col-10"></textarea>
+          <button id="buttonTen" class="saveBtn col-1" type="buton">
             <i class="fas fa-save"></i>
           </button>
       <!-- ROW ENDING TAG-->
       </div>
 
-      <div class="row time-block">
-        <div class="col-1 hour pt-2">11:00 AM</div>
-        <textarea value="" id="" type="text" class="textarea col-10"></textarea>
-        <button id="" class="saveBtn col-1" type="buton">
+      <div class="row time-block" id="timeBlockEleven">
+        <div class="col-1 hour pt-2" id="hourEleven">11:00 AM</div>
+        <textarea value="" id="textEleven" type="text" class="textarea col-10"></textarea>
+        <button id="buttonEleven" class="saveBtn col-1" type="buton">
           <i class="fas fa-save"></i>
         </button>
     <!-- ROW ENDING TAG-->
     </div>
 
-    <div class="row time-block">
-      <div class="col-1 hour pt-2">12:00 PM</div>
-      <textarea value="" id="" type="text" class="textarea col-10"></textarea>
-      <button id="" class="saveBtn col-1" type="buton">
+    <div class="row time-block" id="timeBlockTwelve">
+      <div class="col-1 hour pt-2" id="hourTwelve">12:00 PM</div>
+      <textarea value="" id="textTwelve" type="text" class="textarea col-10"></textarea>
+      <button id="buttonTwelve" class="saveBtn col-1" type="buton">
         <i class="fas fa-save"></i>
       </button>
   <!-- ROW ENDING TAG-->
   </div>
 
-  <div class="row time-block">
-    <div class="col-1 hour pt-2">1:00 PM</div>
-    <textarea value="" id="" type="text" class="textarea col-10"></textarea>
-    <button id="" class="saveBtn col-1" type="buton">
+  <div class="row time-block" id="timeBlockOne">
+    <div class="col-1 hour pt-2" id="hourOne">1:00 PM</div>
+    <textarea value="" id="textOne" type="text" class="textarea col-10"></textarea>
+    <button id="buttonOne" class="saveBtn col-1" type="buton">
       <i class="fas fa-save"></i>
     </button>
 <!-- ROW ENDING TAG-->
 </div>
 
-<div class="row time-block">
-  <div class="col-1 hour pt-2">2:00 PM</div>
-  <textarea value="" id="" type="text" class="textarea col-10"></textarea>
-  <button id="" class="saveBtn col-1" type="buton">
+<div class="row time-block" id="timeBlockTwo">
+  <div class="col-1 hour pt-2" id="hourTwo">2:00 PM</div>
+  <textarea value="" id="textTwo" type="text" class="textarea col-10"></textarea>
+  <button id="buttonTwo" class="saveBtn col-1" type="buton">
     <i class="fas fa-save"></i>
   </button>
 <!-- ROW ENDING TAG-->
 </div>
 
-<div class="row time-block">
-  <div class="col-1 hour pt-2">3:00 PM</div>
-  <textarea value="" id="" type="text" class="textarea col-10"></textarea>
-  <button id="" class="saveBtn col-1" type="buton">
+<div class="row time-block" id="timeBlockThree">
+  <div class="col-1 hour pt-2" id="hourThree">3:00 PM</div>
+  <textarea value="" id="textThree" type="text" class="textarea col-10"></textarea>
+  <button id="buttonThree" class="saveBtn col-1" type="buton">
     <i class="fas fa-save"></i>
   </button>
 <!-- ROW ENDING TAG-->
 </div>
 
-<div class="row time-block">
-  <div class="col-1 hour pt-2">4:00 PM</div>
-  <textarea value="" id="" type="text" class="textarea col-10"></textarea>
-  <button id="" class="saveBtn col-1" type="buton">
+<div class="row time-block" id="timeBlockFour">
+  <div class="col-1 hour pt-2" id="hourFour">4:00 PM</div>
+  <textarea value="" id="textFour" type="text" class="textarea col-10"></textarea>
+  <button id="buttonFour" class="saveBtn col-1" type="buton">
     <i class="fas fa-save"></i>
   </button>
 <!-- ROW ENDING TAG-->
 </div>
 
-<div class="row time-block">
-  <div class="col-1 hour pt-2">5:00 PM</div>
-  <textarea value="" id="" type="text" class="textarea col-10"></textarea>
-  <button id="" class="saveBtn col-1" type="buton">
+<div class="row time-block" id="timeBlockFive">
+  <div class="col-1 hour pt-2" id="hourFive">5:00 PM</div>
+  <textarea value="" id="textFive" type="text" class="textarea col-10"></textarea>
+  <button id="buttonFive" class="saveBtn col-1" type="buton">
     <i class="fas fa-save"></i>
   </button>
 <!-- ROW ENDING TAG-->
