addes comments to HTML and Javascript Docs

--- a/index.html
+++ b/index.html
@@ -29,94 +29,82 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-
+<!-- Container Div for Timeblock START -->
     <div class="container align-items-center justify-content-center">
-      <!-- Timeblocks go here -->
-
+    
+<!-- TimeBlock Nine Div START -->
       <div class="row time-block" id="timeBlockNine">
-            <div class="col-1 hour pt-2" id="hourNine">9:00 AM</div>
-            <textarea value="" id="textNine" type="text" class="textarea col-10"></textarea>
-            <button id="buttonNine" class="saveBtn col-1" type="buton">
-              <i class="fas fa-save"></i>
-            </button>
-        <!-- ROW ENDING TAG-->
-        </div>
-
-        <div class="row time-block" id="timeBlockTen">
-          <div class="col-1 hour pt-2" id="hourTen">10:00 AM</div>
-          <textarea value="" id="textTen" type="text" class="textarea col-10"></textarea>
-          <button id="buttonTen" class="saveBtn col-1" type="buton">
-            <i class="fas fa-save"></i>
-          </button>
-      <!-- ROW ENDING TAG-->
+            <div class="col-2 hour pt-2" id="hourNine">9:00 AM</div>
+            <textarea value="" id="textNine" type="text" class="textarea col-9"></textarea>
+            <button id="buttonNine" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
+<!-- TimeBlock Nine Div END -->
 
+<!-- TimeBlock Ten Div START -->
+      <div class="row time-block" id="timeBlockTen">
+            <div class="col-2 hour pt-2" id="hourTen">10:00 AM</div>
+            <textarea value="" id="textTen" type="text" class="textarea col-9"></textarea>
+            <button id="buttonTen" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
+      </div>
+<!-- TimeBlock Ten Div END -->
+
+<!-- TimeBlock Eleven Div START -->
       <div class="row time-block" id="timeBlockEleven">
-        <div class="col-1 hour pt-2" id="hourEleven">11:00 AM</div>
-        <textarea value="" id="textEleven" type="text" class="textarea col-10"></textarea>
-        <button id="buttonEleven" class="saveBtn col-1" type="buton">
-          <i class="fas fa-save"></i>
-        </button>
-    <!-- ROW ENDING TAG-->
-    </div>
+            <div class="col-2 hour pt-2" id="hourEleven">11:00 AM</div>
+            <textarea value="" id="textEleven" type="text" class="textarea col-9"></textarea>
+            <button id="buttonEleven" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
+      </div>
+<!-- TimeBlock Eleven Div END -->
 
-    <div class="row time-block" id="timeBlockTwelve">
-      <div class="col-1 hour pt-2" id="hourTwelve">12:00 PM</div>
-      <textarea value="" id="textTwelve" type="text" class="textarea col-10"></textarea>
-      <button id="buttonTwelve" class="saveBtn col-1" type="buton">
-        <i class="fas fa-save"></i>
-      </button>
-  <!-- ROW ENDING TAG-->
-  </div>
+<!-- TimeBlock Twelve Div START -->
+      <div class="row time-block" id="timeBlockTwelve">
+            <div class="col-2 hour pt-2" id="hourTwelve">12:00 PM</div>
+            <textarea value="" id="textTwelve" type="text" class="textarea col-9"></textarea>
+            <button id="buttonTwelve" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
+      </div>
+<!-- TimeBlock Twelve Div END -->
 
-  <div class="row time-block" id="timeBlockOne">
-    <div class="col-1 hour pt-2" id="hourOne">1:00 PM</div>
-    <textarea value="" id="textOne" type="text" class="textarea col-10"></textarea>
-    <button id="buttonOne" class="saveBtn col-1" type="buton">
-      <i class="fas fa-save"></i>
-    </button>
-<!-- ROW ENDING TAG-->
-</div>
+<!-- TimeBlock One Div START -->
+      <div class="row time-block" id="timeBlockOne">
+            <div class="col-2 hour pt-2" id="hourOne">1:00 PM</div>
+            <textarea value="" id="textOne" type="text" class="textarea col-9"></textarea>
+            <button id="buttonOne" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
+      </div>
+<!-- TimeBlock One Div END -->
 
-<div class="row time-block" id="timeBlockTwo">
-  <div class="col-1 hour pt-2" id="hourTwo">2:00 PM</div>
-  <textarea value="" id="textTwo" type="text" class="textarea col-10"></textarea>
-  <button id="buttonTwo" class="saveBtn col-1" type="buton">
-    <i class="fas fa-save"></i>
-  </button>
-<!-- ROW ENDING TAG-->
-</div>
+<!-- TimeBlock Two Div START -->
+      <div class="row time-block" id="timeBlockTwo">
+            <div class="col-2 hour pt-2" id="hourTwo">2:00 PM</div>
+            <textarea value="" id="textTwo" type="text" class="textarea col-9"></textarea>
+            <button id="buttonTwo" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
+      </div>
+<!-- TimeBlock Two Div END -->
 
-<div class="row time-block" id="timeBlockThree">
-  <div class="col-1 hour pt-2" id="hourThree">3:00 PM</div>
-  <textarea value="" id="textThree" type="text" class="textarea col-10"></textarea>
-  <button id="buttonThree" class="saveBtn col-1" type="buton">
-    <i class="fas fa-save"></i>
-  </button>
-<!-- ROW ENDING TAG-->
-</div>
+<!-- TimeBlock Three Div START -->
+      <div class="row time-block" id="timeBlockThree">
+            <div class="col-2 hour pt-2" id="hourThree">3:00 PM</div>
+            <textarea value="" id="textThree" type="text" class="textarea col-9"></textarea>
+            <button id="buttonThree" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
+      </div>
+<!-- TimeBlock Three Div END -->
 
-<div class="row time-block" id="timeBlockFour">
-  <div class="col-1 hour pt-2" id="hourFour">4:00 PM</div>
-  <textarea value="" id="textFour" type="text" class="textarea col-10"></textarea>
-  <button id="buttonFour" class="saveBtn col-1" type="buton">
-    <i class="fas fa-save"></i>
-  </button>
-<!-- ROW ENDING TAG-->
-</div>
+<!-- TimeBlock Four Div START -->
+      <div class="row time-block" id="timeBlockFour">
+            <div class="col-2 hour pt-2" id="hourFour">4:00 PM</div>
+            <textarea value="" id="textFour" type="text" class="textarea col-9"></textarea>
+            <button id="buttonFour" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
+      </div>
+<!-- TimeBlock Four Div END -->
 
-<div class="row time-block" id="timeBlockFive">
-  <div class="col-1 hour pt-2" id="hourFive">5:00 PM</div>
-  <textarea value="" id="textFive" type="text" class="textarea col-10"></textarea>
-  <button id="buttonFive" class="saveBtn col-1" type="buton">
-    <i class="fas fa-save"></i>
-  </button>
-<!-- ROW ENDING TAG-->
-</div>
+<!-- TimeBlock Five Div START -->
+      <div class="row time-block" id="timeBlockFive">
+            <div class="col-2 hour pt-2" id="hourFive">5:00 PM</div>
+            <textarea value="" id="textFive" type="text" class="textarea col-9"></textarea>
+            <button id="buttonFive" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
+      </div>
+<!-- TimeBlock Five Div END -->
 
-     
-
-    <!-- DIV CONTAINER END TAG -->
+<!-- Container Div for Timeblock END -->  
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
