consolidated javascript functions for save buttons

--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 
 <!-- Container Div for Timeblock START -->
     <div class="container align-items-center justify-content-center">
-    
+      
 <!-- TimeBlock Nine Div START -->
-      <div class="row time-block" id="timeBlockNine">
-            <div class="col-2 hour pt-2" id="hourNine">9:00 AM</div>
+      <div class="row time-block my-2" id="timeBlockNine">
+            <div class="col-2 hour pt-2" id="hourNine">9:00 AM<span id="timeBlockNineUpdate"  style="display:none">Tasks List Updated</span></div>
             <textarea value="" id="textNine" type="text" class="textarea col-9"></textarea>
             <button id="buttonNine" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
 <!-- TimeBlock Nine Div END -->
 
 <!-- TimeBlock Ten Div START -->
-      <div class="row time-block" id="timeBlockTen">
-            <div class="col-2 hour pt-2" id="hourTen">10:00 AM</div>
+      <div class="row time-block my-2" id="timeBlockTen">
+            <div class="col-2 hour pt-2" id="hourTen">10:00 AM<span id="timeBlockTenUpdate"  style="display:none">Tasks List Updated</span></div>
             <textarea value="" id="textTen" type="text" class="textarea col-9"></textarea>
             <button id="buttonTen" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
@@ -50,7 +50,7 @@
 
 <!-- TimeBlock Eleven Div START -->
       <div class="row time-block" id="timeBlockEleven">
-            <div class="col-2 hour pt-2" id="hourEleven">11:00 AM</div>
+            <div class="col-2 hour pt-2" id="hourEleven">11:00 AM<span id="timeBlockElevenUpdate"  style="display:none">Tasks List Updated</span></div>
             <textarea value="" id="textEleven" type="text" class="textarea col-9"></textarea>
             <button id="buttonEleven" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
@@ -58,7 +58,7 @@
 
 <!-- TimeBlock Twelve Div START -->
       <div class="row time-block" id="timeBlockTwelve">
-            <div class="col-2 hour pt-2" id="hourTwelve">12:00 PM</div>
+            <div class="col-2 hour pt-2" id="hourTwelve">12:00 PM<span id="timeBlockTwelveUpdate"  style="display:none">Tasks List Updated</span></div>
             <textarea value="" id="textTwelve" type="text" class="textarea col-9"></textarea>
             <button id="buttonTwelve" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
@@ -66,7 +66,7 @@
 
 <!-- TimeBlock One Div START -->
       <div class="row time-block" id="timeBlockOne">
-            <div class="col-2 hour pt-2" id="hourOne">1:00 PM</div>
+            <div class="col-2 hour pt-2" id="hourOne">1:00 PM<span id="timeBlockOneUpdate"  style="display:none">Tasks List Updated</span></div>
             <textarea value="" id="textOne" type="text" class="textarea col-9"></textarea>
             <button id="buttonOne" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
@@ -74,7 +74,7 @@
 
 <!-- TimeBlock Two Div START -->
       <div class="row time-block" id="timeBlockTwo">
-            <div class="col-2 hour pt-2" id="hourTwo">2:00 PM</div>
+            <div class="col-2 hour pt-2" id="hourTwo">2:00 PM<span id="timeBlockTwoUpdate"  style="display:none">Tasks List Updated</span></div>
             <textarea value="" id="textTwo" type="text" class="textarea col-9"></textarea>
             <button id="buttonTwo" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
@@ -82,7 +82,7 @@
 
 <!-- TimeBlock Three Div START -->
       <div class="row time-block" id="timeBlockThree">
-            <div class="col-2 hour pt-2" id="hourThree">3:00 PM</div>
+            <div class="col-2 hour pt-2" id="hourThree">3:00 PM<span id="timeBlockThreeUpdate"  style="display:none">Tasks List Updated</span></div>
             <textarea value="" id="textThree" type="text" class="textarea col-9"></textarea>
             <button id="buttonThree" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
@@ -90,7 +90,7 @@
 
 <!-- TimeBlock Four Div START -->
       <div class="row time-block" id="timeBlockFour">
-            <div class="col-2 hour pt-2" id="hourFour">4:00 PM</div>
+            <div class="col-2 hour pt-2" id="hourFour">4:00 PM<span id="timeBlockFourUpdate"  style="display:none">Tasks List Updated</span></div>
             <textarea value="" id="textFour" type="text" class="textarea col-9"></textarea>
             <button id="buttonFour" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
@@ -98,7 +98,7 @@
 
 <!-- TimeBlock Five Div START -->
       <div class="row time-block" id="timeBlockFive">
-            <div class="col-2 hour pt-2" id="hourFive">5:00 PM</div>
+            <div class="col-2 hour pt-2" id="hourFive">5:00 PM<span id="timeBlockFiveUpdate"  style="display:none">Tasks List Updated</span></div>
             <textarea value="" id="textFive" type="text" class="textarea col-9"></textarea>
             <button id="buttonFive" class="saveBtn col-1" type="buton"><i class="fas fa-save"></i></button>
       </div>
